third_party/cuda-oxide/crates/cuda-macros/tests/compile_fail/device_extern_reserved_name.rs
use cuda_macros::device;

#[device]
unsafe extern "C" {
    fn cuda_oxide_device_extern_evil();
}

fn main() {}
