third_party/cuda-oxide/crates/cuda-macros/tests/compile_fail/device_extern_reserved_name.stderr
error: function name `cuda_oxide_device_extern_evil` starts with the reserved cuda-oxide prefix `cuda_oxide_`; rename your function — this namespace is reserved for cuda-oxide internal symbol mangling (see crates/reserved-oxide-symbols)
 --> tests/compile_fail/device_extern_reserved_name.rs:5:8
  |
5 |     fn cuda_oxide_device_extern_evil();
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
